2009-10-20  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/aldor/Makefile2.in: Remove useless trace commands.

2009-10-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mantepse.spad.pamphlet: checkInterpolant(): Reject
	pathological solutions.

2009-10-20  Ralf Hemmecke  <ralf@hemmecke.de>

	* Makefile.in: Correct test.

2009-10-20  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mantepse.spad.pamphlet,
	src/input/mantepse.spad.pamphlet: add functional equations, adjust
	tests

2009-10-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Set '*print-circle*' to t.

2009-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix array indexing error.
	* src/algebra/modhpsol.spad.pamphlet: critical__index():
	Skip coordinates which are not present.

2009-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Do not build Aldor interface by default.
	Makefile.in: Adjust.

2009-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mantepse.spad.pamphlet: Add GuessPolynomialInteger
	src/algebra/exposed.lsp.pamphlet: expose it.
	src/algebra/Makefile.in: Adjust.

2009-10-15  Anatoly Raportirenko <ram@sunct1.jinr.ru>

	* src/lib/Makefile.in: For cmucl build 32-bit
	libspad.

2009-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Whitespace cleanup.

2009-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Spelling corrections.

2009-10-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Martin Rubey  <martin.rubey@univie.ac.at>

	Guessing using modular method.
	* src/algebra/modhpsol.spad.pamphlet: New file.
	mantepse.spad.pamphlet: Call modular solver.
	fffg.spad.pamphlet: Export genVectorStream().
	src/algebra/Makefile.in, src/algebra/boo-pack1.input,
	src/algebra/boo-pack2.input: Adjust bootstrap.
	src/algebra/exposed.lsp.pamphlet: Unexpose GUESSAN.

2009-10-10  Bill Page  <bill.page@newsynthesis.org>

	* Fix bug: Error detected within library code: Unknown operator
	* change 'applyQuote to '%quote
